--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,19 +3,6 @@
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="Projectile",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/Maps/FirstPersonExampleMap.FirstPersonExampleMap
-LocalMapOptions=
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/TestingGrounds.TestingGroundsGameMode
-GlobalDefaultServerGameMode=None
-
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_9
 
@@ -75,4 +62,19 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Levels/Maps/FirstPersonExampleMap.FirstPersonExampleMap
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap.FirstPersonExampleMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/InfiniteTerrainGameMode.InfiniteTerrainGameMode_C
+GlobalDefaultServerGameMode=None
+
 
